Fix nasty css flickerin shit

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -1293,19 +1293,20 @@ Estilos d3
         color: $gris;
         position: relative;
         display: block;
-        height: 90px;
-        width: 200px;
+        height: 100px;
+        width: 250px;
         white-space: wrap;
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: left;
-        padding: 20px 10px;
+        padding: 10px 10px;
+        -webkit-transform-style: preserve-3d;
         @include transition(all 0.5s ease-in-out);
+
         &:hover {
           position: relative;
           overflow: visible;
-          text-overflow: clip;
-          width: auto;
+          width: 600px;
         }
         &.active {
           width: 200px;          
